<resources>
    <string name="app_name">BookKeeping</string>
    <string name="insert_new_record">新增记录</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="insert_new_record_2">新增</string>
    <string name="settlement">结算</string>
    <string name="settlement_in">结算（周期中）：</string>
    <string name="should_pay_in">应付（周期中）：</string>
    <string name="payment_in">已付（周期中）：</string>
    <string name="record_data">账单记录:</string>
    <string name="have_no_record_yet">暂无账单记录</string>
    <string name="have_no_unsettlement_record_yet">暂无未结算账单记录</string>
    <string name="please_input">请输入</string>
    <string name="add_success">添加成功</string>
    <string name="relations">关系人</string>
    <string name="add_relation">添加关系人</string>
    <string name="remind_str">删除关系人可能导致有关的账单记录中信息不显示</string>
    <string name="remind_sure">确认吗？</string>
</resources>
