<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="@dimen/dialog_height2"
    android:background="@drawable/white_dialog_corner"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="20dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/remind_str"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_blue2"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/text_blue2"
            android:text="@string/remind_sure"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <View
        android:background="@color/gray2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:gravity="center"
            android:id="@+id/tv_center_cancle"
            android:text="@string/cancel"
            android:textColor="@color/text_blue1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <View
            android:layout_width="1dp"
            android:background="@color/gray2"
            android:layout_height="match_parent"/>
        <TextView
            android:gravity="center"
            android:id="@+id/tv_center_sure"
            android:text="@string/sure"
            android:textColor="@color/red"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>