<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_gray"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/card_order_create_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="上次结算：" />

                <ImageView
                    android:id="@+id/users"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/contacts_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="￥"
                        android:textColor="@color/order_name"
                        android:textSize="15sp" />

                    <TextView
                        android:singleLine="true"
                        android:maxWidth="170dp"
                        android:ellipsize="end"
                        android:textColor="@color/order_name"
                        android:id="@+id/tv_available_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00"
                        android:textSize="35sp" />
                </LinearLayout>
                <TextView
                    android:text="2018-09-23"
                    android:textSize="20sp"
                    android:gravity="end|bottom"
                    android:id="@+id/settlement_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:elevation="3dp"
                    android:layout_margin="5dp"
                    android:id="@+id/btn_settlement"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/blue_10dp_corner"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settlement"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:elevation="3dp"
                    android:layout_margin="5dp"
                    android:id="@+id/btn_new_record"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/red_10dp_corner"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/insert_new_record_2"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_data"
        android:textSize="15sp" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/line_no_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_norecords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_no_record_yet"
            android:textColor="#3b3c3f"
            android:textSize="14dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/record_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        />
</LinearLayout>