<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_gray"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar_layout"
        layout="@layout/layout_title_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="选择日期"
                android:textColor="@color/order_name"
                android:textSize="14sp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/time_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_color_5"
                android:background="@null"
                android:hint="@string/please_input"
                android:textColorHint="@color/text_color_8"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color_7"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="明细："
                android:textColor="@color/order_name"
                android:textSize="14sp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/things_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_color_5"
                android:background="@null"
                android:hint="@string/please_input"
                android:textColorHint="@color/text_color_8"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textCursorDrawable="@drawable/editcursor"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color_7"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="金额："
                android:textColor="@color/order_name"
                android:textSize="14sp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/payment_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_color_5"
                android:background="@null"
                android:hint="@string/please_input"
                android:digits="1234567890."
                android:inputType="number"
                android:textColorHint="@color/text_color_8"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textCursorDrawable="@drawable/editcursor"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color_7"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="付款人："
                android:textColor="@color/order_name"
                android:textSize="14sp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/payment_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_color_5"
                android:background="@null"
                android:hint="@string/please_input"
                android:textColorHint="@color/text_color_8"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color_7"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关系人："
                android:textColor="@color/order_name"
                android:textSize="14sp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/with_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_color_5"
                android:background="@null"
                android:hint="@string/please_input"
                android:textColorHint="@color/text_color_8"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color_7"/>
        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/commit_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/selector_btn_red_fillet"
        android:gravity="center"/>

    <RelativeLayout
        android:id="@+id/insert_new_record_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7f000000"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:background="@mipmap/success_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="140dp"
                android:textSize="20sp"
                android:textColor="#204FB3"
                android:text="@string/add_success"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>